--- a/src/client/resources/assets/newbase/lang/en_us.json
+++ b/src/client/resources/assets/newbase/lang/en_us.json
@@ -17,6 +17,8 @@
   "newbase.hudscreen.togglecoordinatesdisplay": "Toggle Coordinates Display",
   "newbase.hudscreen.togglebiomedisplay": "Toggle Biome Display",
   "newbase.hudscreen.togglefpsdisplay": "Toggle Fps Display",
+  "newbase.hudscreen.toggelpitchyaw": "Toggle Pitch Yaw Display",
+  "newbase.hudscreen.toggeldaycount": "Toggle Day Count Display",
   "newbase.hudscreen.enabled": "§aEnabled",
   "newbase.hudscreen.disabled": "§4Disabled",
   "newbase.hudscreen.tooltip": "Press to Toggle",
