Renamed some Tooltips in the Hud screen

--- a/src/client/resources/assets/newbase/lang/en_us.json
+++ b/src/client/resources/assets/newbase/lang/en_us.json
@@ -10,6 +10,7 @@
   "newbase.configscreen.generic": "Generic Configs",
   "newbase.configscreen.genericbutton": "Generic Configs",
   "newbase.configscreen.rendertooltip": "Opens the config menu for the Renderings.",
+  "newbase.configscreen.generictooltip": "Opens the config menu for Generic Features.",
   "newbase.configscreen.nametooltip": "Close with ESC.",
 
   "newbase.hudscreen.name": "Hud Config Screen",
