Added color and keybinds to a save config

--- a/src/client/resources/assets/newbase/lang/en_us.json
+++ b/src/client/resources/assets/newbase/lang/en_us.json
@@ -2,13 +2,13 @@
   "newbase.name": "NewBase",
 
   "newbase.configscreen.name": "Config Screen",
-  "newbase.configscreen.hud": "Hud Configs",
-  "newbase.configscreen.hudbutton": "Hud Configs",
+  "newbase.configscreen.hud": "Hud Config",
+  "newbase.configscreen.hudbutton": "Hud Config",
   "newbase.configscreen.hudtooltip": "Opens the config menu for the Hud.",
-  "newbase.configscreen.render": "Render Configs",
-  "newbase.configscreen.renderbutton": "Render Configs",
-  "newbase.configscreen.generic": "Generic Configs",
-  "newbase.configscreen.genericbutton": "Generic Configs",
+  "newbase.configscreen.render": "Render Config",
+  "newbase.configscreen.renderbutton": "Render Config",
+  "newbase.configscreen.generic": "Generic Config",
+  "newbase.configscreen.genericbutton": "Generic Config",
   "newbase.configscreen.rendertooltip": "Opens the config menu for the Renderings.",
   "newbase.configscreen.generictooltip": "Opens the config menu for Generic Features.",
   "newbase.configscreen.nametooltip": "Close with ESC.",
@@ -24,6 +24,7 @@
   "newbase.hudscreen.enabled": "§aEnabled",
   "newbase.hudscreen.disabled": "§4Disabled",
   "newbase.hudscreen.tooltip": "Press to Toggle",
+  "newbase.hudscreen.changecolor": "Click to change Color",
 
   "newbase.renderscreen.name": "Render Config Screen",
   "newbase.renderscreen.back": "§4Back",
