added GPU percent display and started to implement a zoom function

--- a/src/client/resources/assets/newbase/lang/en_us.json
+++ b/src/client/resources/assets/newbase/lang/en_us.json
@@ -21,6 +21,7 @@
   "newbase.hudscreen.toggelpitchyaw": "Toggle Pitch Yaw Display",
   "newbase.hudscreen.toggeldaycount": "Toggle Day Count Display",
   "newbase.hudscreen.toggelreallivetime": "Toggle Time Display",
+  "newbase.hudscreen.toggelgpupercent": "Toggle GPU Percent Display",
   "newbase.hudscreen.enabled": "§aEnabled",
   "newbase.hudscreen.disabled": "§4Disabled",
   "newbase.hudscreen.tooltip": "Press to Toggle",
